# master-thesis

./: README.md
ADO-project/source/: ADO-project.sln
ASP.Net-project/: ERP notes.txt
ASP.Net-project/Database/: ASPNETDB_log.LDF
ASP.Net-project/Docs/: Concurrentieanalyse.doc  Functionele Analyse.doc  Korte concurrentieanalyse + beschrijving website.doc  Mondelinge vragenrondes.docx  Planning.doc  laatsteloodjes.docx  vroemvroem 7.0 .vpp  vroemvroem.vpp
Eindwerk/: Richtlijnen eindwerk IM 2009-2010 v 1.42.docx  Single Sign On - Ubuntu.docx  Single Sign On - Ubuntu.pptx
ManualProject/: Default.aspx  Default.aspx.vb  ReferenceManual.sln  fr.ldb  fr.mdb  template.xml  web.config
ManualProject/App_Code/: Manual.xsd  Manual.xss
ManualProject/App_Data/: Manual_InserTaal.sql  Manual_InsertBedrijf.sql  Manual_InsertCategorie.sql  Manual_InsertVersie.sql  alleStoredProcs29-04.sql  beheerlogin.xml  doorsteeklogin.xml  localisatie.xml  modules.mdb  onDeleteArtikel29-04-Nieuwst.sql  onInsertArtikel29-04-Nieuwst.sql  tooltips.xml
ManualProject/App_Presentation/: Aanmeldpagina.aspx  Aanmeldpagina.aspx.vb  AlleArtikels.aspx  AlleArtikels.aspx.vb  ArtikelBewerken.aspx  ArtikelBewerken.aspx.vb  ArtikelToevoegen.aspx  ArtikelToevoegen.aspx.vb  ArtikelVerwijderen.aspx  ArtikelVerwijderen.aspx.vb  Beheer.aspx  Beheer.aspx.vb  Default.aspx  Default.aspx.vb  MaakModules.aspx  MaakModules.aspx.vb  (+26 more)
School/Master Utrecht/AFP/AFP Assignments/01 - Assignment/3720942-3728420-Assignment01/: 3720942-3728420-Assignment01.cabal
School/Master Utrecht/AFP/AFP Assignments/01 - Assignment/3720942-3728420-Assignment01/Perms/: PermCheck.hs
School/Master Utrecht/AFP/AFP Assignments/05 - Assignment/3720942-3728420-Assignment05/: 3720942-3728420-Assignment05.cabal
School/Master Utrecht/AFP/AFP Assignments/05 - Assignment/3720942-3728420-Assignment05/Chat/: Main.hs
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/: 3720942-3728420-Assignment02.cabal
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Assignment/: Fix.hs  TypeAB.lhs
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/: f1better.prof  profiling explanation.txt
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/conc/: ProfileConc.hp  ProfileConc_types.ps
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/concprime/: ProfileConcPrime.prof  ProfileConcPrime_simple.ps  ProfileConcPrime_type.ps
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/f1/: ProfileF1.hs  ProfileF1.prof  ProfileF1_simple.ps  ProfileF1_type.ps
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/f2/: ProfileF2.prof  ProfileF2_simple.ps  ProfileF2_type.ps
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/rev/: ProfileRev.hp  ProfileRev_closure.ps  ProfileRev_type.ps
School/Master Utrecht/AFP/AFP Assignments/AFP Assignments/02 - Assignment/3720942-3728420-Assignment02/src/Profiles/revprime/: ProfileRevPrime.hs  ProfileRevPrime_closure.ps  ProfileRevPrime_type.ps
School/Master Utrecht/APA/Project 1 - Monotone Framework/1Dataflow/: Makefile  dataflow.cabal
School/Master Utrecht/APA/Project 1 - Monotone Framework/1Dataflow/doc/: Documentation.aux  Documentation.bbl  Documentation.blg
School/Master Utrecht/APA/Project 1 - Monotone Framework/1Dataflow/examples/: bla-bad.js  bla.js  function.js  gedeelte beerend.txt  ltgt.js  unary-and-new.js  var.js
School/Master Utrecht/APA/Project 1 - Monotone Framework/1Dataflow/src/: Convert.hs  Datatypes.hs  Flow.ag  Main.hs  Scope.ag
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/: AUTHORS  Makefile  Setup.lhs  fun.cabal  uuagc_options
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/src/: HM2SystemF.hs
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/src/CCO/: HM2SystemF.hs
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/src/CCO/HM/: AG.hs  Base.hs
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/src/CCO/HM2SystemF/: AG.ag
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/src/CCO/SystemF/AG/: Base.ag
School/Master Utrecht/APA/Project 1 - Monotone Framework/2TypeEffectSystems/cco-labd/cco-labd/tests/: 04.lamb.hm  05.lamb2.hm  06.lamb2partial.hm  07.lamb2lamb.hm  08.lamb2lamb.hm  09.simplelet.hm  10.nestedlet.hm  11.project.hm  12.project.hm  13.singletylam.hm  14.singletylam2.hm  i01.lamb.hm
School/Master Utrecht/CC/Assignments/Bib2HTML/src/bibtex2html/: .project  bibtex2html.cabal
School/Master Utrecht/CC/Assignments/Bib2HTML/src/bibtex2html/src/: Bib2HTML.hs  BibTex.lhs  Main.hs  PPHTML.hs
School/Master Utrecht/CC/Assignments/Bib2HTML/src/bibtex2html/testdat/: test.bib  test.html
School/Master Utrecht/CC/Assignments/TDiagrams/B. to review/tdiagrams-0.0.5/: AUTHORS  LICENSE  Makefile  README  runall  tdiagrams.cabal
School/Master Utrecht/CC/Assignments/TDiagrams/B. to review/tdiagrams-0.0.5/examples/: 1.tdiag  10.tdiag  11.tdiag  13.tdiag  2.tdiag  4.tdiag  5.tdiag  8.tdiag
School/Master Utrecht/CC/Assignments/TDiagrams/B. to review/tdiagrams-0.0.5/src/: TDiag2Picture.hs
School/Master Utrecht/CC/Assignments/TDiagrams/B. to review/tdiagrams-0.0.5/src/CCO/Diag/: AG.ag  AG.hs  Lexer.hs  Parser.hs
School/Master Utrecht/CC/Assignments/TDiagrams/B. to review/tdiagrams-0.0.5/src/CCO/Diag/AG/: Base.ag  TDiag2Picture.ag
database/: ADOdbEmailadressen.mdb  StudentenIms2.xls  database.sql.txt
master-thesis/: troubleshooting.txt
(+1948 files in other folders)
