name:                  dataflow
version:               0.0.5
synopsis:              ...
description:           ...
license:               AllRightsReserved
license-file:          LICENSE
category:              ...
copyright:             ...
author:                ...
maintainer:            ...
stability:             provisional
homepage:              ...
build-type:            Simple
cabal-version:         >= 1.2
                       
executable main
  main-is:             Main.hs
  build-depends:       base, hjs, bifunctors, containers, process, cco
  hs-source-dirs:      src
