name:           bibtex2html
version:        0.1
cabal-version:  >= 1.2
Author:         Beerend Lauwers, Frank Wijmans
build-type:     Simple

executable bibtex2html
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4, ansi-terminal >= 0.5, cco, uulib >= 0.9, containers >= 0.4
  ghc-options:     -Wall
  other-modules:   Bib2HTML, PPHTML, BibTex, ParseBib

